* Updated `README.md`

* Added `requirements.txt`