@@ -1,4 +1,5 @@
-name: Tech Field Day 27
-url: https://techfieldday.com
+name: Test Event 838
+url: http://aconaway.com
 tags:
-  - TFD27
+  - deleteme
+  - deletem2
