@@ -1,2 +1,3 @@
 name: Presenter 1
-where: presenter1@twitter.com
+where: "@aconaway_testing@masto.ai"
+spoiler: 
